--- a/wordle-helper-template.html
+++ b/wordle-helper-template.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon-32x32.png?" sizes="32x32" />
 	<link rel="icon" type="image/png" href="assets/img/favicon-16x16.png?" sizes="16x16" />
 	<title>Wordle Helpers</title>
-  <style src="index.css">
+  <style>
 <% CSS %>
   </style>
 </head>
