add build, and analysis scripts

--- a/template.html
+++ b/template.html
@@ -21,8 +21,8 @@
   <p>Entering the letter followed by a period means the letter is in the right
   spot. Followed by a comma, means in the wrong spot. If not followed by
   anything, it means the letter is not in the answer.</p>
-  <p>E.g. SO.AR,E means that s,a,e are not in the word, o is in the right place,
-  and r is in the wrong spot.</p>
+  <p>E.g. SO.AR,E means that S,A,E are not in the word, O is in the right place,
+  and R is in the wrong spot.</p>
 	<ol>
     <li>
       <input type="text" id="input1" oninput="update()">
