--- a/src/template.html
+++ b/src/template.html
@@ -50,6 +50,7 @@
     </li>
   </ol>
   <ol id="suggestions"></ol>
+  <div id="afterSuggestions"></div>
 </body>
 <script type="text/javascript">
 'use strict';
