add manual build

--- a/src/template.html
+++ b/src/template.html
@@ -16,11 +16,8 @@
 </head>
 <body>
   <h1>Enter your wordle guesses below</h1>
-  <p>Entering the letter followed by a period means the letter is in the right
-  spot. Followed by a comma, means in the wrong spot. If not followed by
-  anything, it means the letter is not in the answer.</p>
-  <p>E.g. SO.AR,E means that S,A,E are not in the word, O is in the right place,
-  and R is in the wrong spot.</p>
+  <p>Entering the letter followed by a period means the letter is in the right spot. Followed by a comma, means it's in the wrong spot. Else, (i.e. you just typed in the letter), it means the letter is not in the answer.</p>
+  <p>E.g. SO.AR,E means that S,A,E are not in the word, O is in the right place, and R is in the wrong spot.</p>
 	<ol>
     <li>
       <input type="text" id="input1" oninput="update()">
