run prettier on html too

--- a/src/template.html
+++ b/src/template.html
@@ -1,58 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Help with wordle words. Input your guesses
-  and results and get suggested words to try">
-	<meta name="author" content="Thomas Tay Ang Chun">
-	<link rel="icon" type="image/png" href="assets/img/favicon-32x32.png?" sizes="32x32" />
-	<link rel="icon" type="image/png" href="assets/img/favicon-16x16.png?" sizes="16x16" />
-	<title>Wordle Helpers</title>
-  <style>
-<% CSS %>
-  </style>
-</head>
-<body>
-  <h1>Enter your wordle guesses below</h1>
-  <p>Entering the letter followed by a period means the letter is in the right spot. Followed by a comma, means it's in the wrong spot. Else, (i.e. you just typed in the letter), it means the letter is not in the answer.</p>
-  <p>E.g. A,ROSE. means that R,O,S are not in the word, E is in the right place, and A is in the wrong spot.</p>
-  <button onclick='demo("A,ROSE.", "DA,NCE.")'>Try it out!</button>
-	<ol>
-    <li>
-      <input type="text" id="input1" oninput="update()">
-      <div id="error1"></div>
-    </li>
-    <li>
-      <input type="text" id="input2" oninput="update()">
-      <div id="error2"></div>
-    </li>
-    <li>
-      <input type="text" id="input3" oninput="update()">
-      <div id="error3"></div>
-    </li>
-    <li>
-      <input type="text" id="input4" oninput="update()">
-      <div id="error4"></div>
-    </li>
-    <li>
-      <input type="text" id="input5" oninput="update()">
-      <div id="error5"></div>
-    </li>
-    <li>
-      <input type="text" id="input6" oninput="update()">
-      <div id="error6"></div>
-    </li>
-  </ol>
-  <ol id="suggestions"></ol>
-  <div id="afterSuggestions"></div>
-  <footer>
-    <a href="https://github.com/thomastay/wordle-helper">View source on Github</a>
-  </footer>
-</body>
-<script type="text/javascript">
-'use strict';
-<% JS %>
-</script>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="description"
+      content="Help with wordle words. Input your guesses
+  and results and get suggested words to try"
+    />
+    <meta name="author" content="Thomas Tay Ang Chun" />
+    <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png?" sizes="32x32" />
+    <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png?" sizes="16x16" />
+    <title>Wordle Helpers</title>
+    <style>
+      <% CSS %>
+    </style>
+  </head>
+  <body>
+    <h1>Enter your wordle guesses below</h1>
+    <p>
+      Entering the letter followed by a period means the letter is in the right spot. Followed by a comma, means it's in
+      the wrong spot. Else, (i.e. you just typed in the letter), it means the letter is not in the answer.
+    </p>
+    <p>E.g. A,ROSE. means that R,O,S are not in the word, E is in the right place, and A is in the wrong spot.</p>
+    <button onclick='demo("A,ROSE.", "DA,NCE.")'>Try it out!</button>
+    <ol>
+      <li>
+        <input type="text" id="input1" oninput="update()" />
+        <div id="error1"></div>
+      </li>
+      <li>
+        <input type="text" id="input2" oninput="update()" />
+        <div id="error2"></div>
+      </li>
+      <li>
+        <input type="text" id="input3" oninput="update()" />
+        <div id="error3"></div>
+      </li>
+      <li>
+        <input type="text" id="input4" oninput="update()" />
+        <div id="error4"></div>
+      </li>
+      <li>
+        <input type="text" id="input5" oninput="update()" />
+        <div id="error5"></div>
+      </li>
+      <li>
+        <input type="text" id="input6" oninput="update()" />
+        <div id="error6"></div>
+      </li>
+    </ol>
+    <ol id="suggestions"></ol>
+    <div id="afterSuggestions"></div>
+    <footer>
+      <a href="https://github.com/thomastay/wordle-helper">View source on Github</a>
+    </footer>
+  </body>
+  <script type="text/javascript">
+    'use strict';
+    <% JS %>
+  </script>
 </html>
