--- a/src/template.html
+++ b/src/template.html
@@ -23,6 +23,8 @@
     <p>Entering the letter on its own means the letter is not in the answer.</p>
     <p>E.g. A,ROSE. means that R,O,S are not in the word, E is in the right place, and A is in the wrong spot.</p>
     <button onclick='demo("A,ROSE.", "DA,NCE.")'>Try it out!</button>
+    <button onclick="suggestStartingWord()">I can't think of a word to start</button>
+    <div id="suggested-starting-word"></div>
     <ol>
       <li>
         <input type="text" id="input1" oninput="update()" />
