--- a/src/template.html
+++ b/src/template.html
@@ -51,6 +51,7 @@
         <div id="error6"></div>
       </li>
     </ol>
+    <noscript>You need Javascript for this app to work properly</noscript>
     <ol id="suggestions"></ol>
     <div id="afterSuggestions"></div>
     <footer>
