add suggestion to scroll down

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,7 @@
     <p>Entering the letter followed by a comma means it's in the wrong spot.</p>
     <p>Entering the letter on its own means the letter is not in the answer.</p>
     <p>E.g. A,ROSE. means that R,O,S are not in the word, E is in the right place, and A is in the wrong spot.</p>
+    <p><i>Make sure to scroll down to see the words that match your guesses.</i></p>
     <button onclick='demo("A,ROSE.", "DA,NCE.")'>Try it out!</button>
     <button onclick="suggestStartingWord()">I can't think of a word to start</button>
     <div id="suggested-starting-word"></div>
