First cut at server side rendering
Reduced the number of suggestions to 100. With that, the extra
bundle size is ~1.6kb. This brings the total bundle size to 26.6kb
minified.

Need to investigate: does this still fit into a single gzip block?

--- a/src/template.html
+++ b/src/template.html
@@ -53,8 +53,13 @@
       </li>
     </ol>
     <noscript>You need Javascript for this app to work properly</noscript>
-    <ol id="suggestions"></ol>
-    <div id="afterSuggestions"></div>
+    <ol id="suggestions">
+      <% SUGGESTIONS %>
+    </ol>
+    <div id="afterSuggestions">
+      <!-- prettier-ignore -->
+      <% AFTER_SUGGESTIONS %>
+    </div>
     <footer>
       <a href="https://github.com/thomastay/wordle-helper">View source on Github</a>
     </footer>
