--- a/src/template.html
+++ b/src/template.html
@@ -62,6 +62,7 @@
     </div>
     <footer>
       <a href="https://github.com/thomastay/wordle-helper">View source on Github</a>
+      <p>Made by <a href="/">Thomas Tay</a>. Please mail all tomatoes to thomastayac; Google mail.</p>
     </footer>
   </body>
   <script type="text/javascript">
