--- a/src/template.html
+++ b/src/template.html
@@ -62,7 +62,10 @@
     </div>
     <footer>
       <a href="https://github.com/thomastay/wordle-helper">View source on Github</a>
-      <p>Made by <a href="/">Thomas Tay</a>. Please mail all tomatoes to thomastayac; Google mail.</p>
+      <p>
+        Made by <a href="/">Thomas Tay</a>. Please mail all tomatoes to
+        <a href="mailto:thomastayac@gmail.com?subject=Wordle Helper">thomastayac</a>
+      </p>
     </footer>
   </body>
   <script type="text/javascript">
